2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix precision issue with algebra::vec conversion.

	* mln/core/point.hh: Round float values.

	* tests/geom/rotate.cc: Add a test to be sure there is no
	precision issues.

2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add fastest versions for skeleton constrained related algorithms.

	* mln/morpho/skeleton_constrained.hh,
	* mln/topo/skeleton/crest.hh: Add fastest versions.

	* mln/topo/skeleton/is_simple_point.hh: Rewrite as functor and add
	fastest versions.

	* tests/topo/skeleton/is_simple_point.cc: Fix test.

2011-05-05  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	* mln/io/magick/save.hh: Add support for opacity.

2011-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/accu/stat/median_h.hh: Add missing operator=().

2011-03-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Here.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Here.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/labeling/colorize.hh: Add a missing inline.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Add more from_to overloards.

	* mln/convert/impl/from_unsigned_to_value.hh,
	* mln/value/label.hh: Here.

2011-03-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/labeling/fill_holes.hh: Improve speed.

2011-03-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/fun/v2v/rgb_to_luma.hh: New function for grayscale
	conversion.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/util/array.hh: Add last() method.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add an optional base index for debug::iota.

	* mln/debug/iota.hh,
	* mln/debug/iota.spe.hh: Here.

2011-01-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/convert/to_qimage_nocopy.cc: Fix a warning.

2011-01-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a serious bug with gcc 4.5 and later.
